--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,28 @@ img {
   display: block;
   max-width: 100%;
 }
+
+#datetime-picker {
+  box-sizing: border-box;
+  font-size: large;
+  font-weight: bold;
+  font-size: large;
+}
+
+.timer {
+  display: flex;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 20px;
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: large;
+}
+
+.label {
+  text-transform: uppercase;
+}
